# vmaker

./: .gitignore  README.md  config.json  pyproject.toml
doc/: basic-concept.md  index.md  pnpm-lock.yaml
doc/.vitepress/: config.mts
doc/guides/: basic-concepts.md  getting-started.md
doc/zh_cn/: index.md
doc/zh_cn/guides/: basic-concepts.md
vmaker/: config.py  constants.py  funcs.py  main.py  test.py  utils.py
