[tool.poetry]
name = "vmaker"
version = "0.1.0"
description = ""
authors = ["gaojunran <nebula2021@126.com>"]
readme = "README.md"

[tool.poetry.scripts]
vmaker = "vmaker.main:app"


[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
