[tool.poetry]
name = "vmaker"
version = "0.1.2"
description = ""
authors = ["gaojunran <nebula2021@126.com>"]
readme = "README.md"

[tool.poetry.scripts]
vmaker = "vmaker.main:app"


[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.12.3"}
ffmpeg-python = "^0.2.0"
setuptools = "^70.3.0"
questionary = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
